Fixed Flickering bug added basic electron builder

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -94,6 +94,6 @@ nav {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 8%;
+    width: 1%;
     background: var(--citrus);
 }
